crates/filekind-core/tests/snapshots/golden__londo__linux_install_sh.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
#!/bin/sh
# Generated by filekind [VERSION] — do not edit.
# Source: Londo Save (.londo)
# Regenerate with: filekind build
#
# Installs the .londo file type for the current user.
# No root required, and nothing outside $HOME is touched.
#
# filekind is a compiler, not an installer: this script is emitted so you can
# read it before it runs. It does not write to the MIME database directly —
# it calls the same xdg-* tools a package would.

set -eu

here=$(CDPATH= cd -- "$(dirname -- "$0")" && pwd)
cd "$here"

MODE=user
DATA_DIR="${XDG_DATA_HOME:-$HOME/.local/share}"
MIME="application/vnd.london.londo"
ICON_NAME="application-vnd.london.londo"
DESKTOP_FILE="londo-player.desktop"
MIME_FILE="londo-save-mime.xml"

require() {
    command -v "$1" >/dev/null 2>&1 || {
        printf 'filekind: required command not found: %s\n' "$1" >&2
        printf '          install the xdg-utils package and try again\n' >&2
        exit 1
    }
}
require xdg-mime

printf 'Installing MIME type %s\n' "$MIME"
xdg-mime install --mode "$MODE" --novendor "$MIME_FILE"

if command -v xdg-icon-resource >/dev/null 2>&1; then
    for size in 16 22 24 32 48 64 128 256 ; do
        icon="icons/hicolor/${size}x${size}/mimetypes/${ICON_NAME}.png"
        [ -f "$icon" ] || continue
        xdg-icon-resource install --context mimetypes --mode "$MODE" \
            --size "$size" "$icon" "$ICON_NAME"
    done
else
    printf 'filekind: xdg-icon-resource not found, skipping icons\n' >&2
fi

printf 'Installing desktop entry %s\n' "$DESKTOP_FILE"
mkdir -p "$DATA_DIR/applications"
cp -f "$DESKTOP_FILE" "$DATA_DIR/applications/$DESKTOP_FILE"
chmod 644 "$DATA_DIR/applications/$DESKTOP_FILE"

if command -v update-desktop-database >/dev/null 2>&1; then
    update-desktop-database "$DATA_DIR/applications" || true
fi
if command -v update-mime-database >/dev/null 2>&1; then
    update-mime-database "$DATA_DIR/mime" || true
fi

# Make this the default application for the type. On Linux, unlike Windows,
# a program is allowed to ask for this — but it is still the user's choice,
# so it is one clearly-labelled line you can delete.
xdg-mime default "$DESKTOP_FILE" "$MIME"
printf '\nDone. %s is now registered as %s.\n' ".londo" "$MIME"
printf 'Icon caches are lazy; log out and back in if the icon looks stale.\n'
printf 'To undo: ./uninstall.sh\n'
