crates/filekind-core/tests/snapshots/golden__londo__linux_packaging_deb_control.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
Package: londo-save-mime
Version: 1.0
Section: misc
Priority: optional
Architecture: all
Depends: shared-mime-info, desktop-file-utils
Maintainer: filekind <nobody@example.invalid>
Description: Londo Save file type registration
 Registers the .londo extension as application/vnd.london.londo on this system,
 including the shared-mime-info entry, the desktop entry and the hicolor
 icons.
 .
 Generated by filekind 0.5.0. Edit the .filekind spec and
 regenerate rather than patching this package.
