crates/filekind-core/tests/snapshots/golden__londo__linux_packaging_londo-save-mime_spec.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
# Generated by filekind 0.5.0 — do not edit.
# Source: Londo Save (.londo)
# Regenerate with: filekind build
#
# Build with:
#     tar czf ~/rpmbuild/SOURCES/londo-save-mime-1.0.tar.gz \
#         --transform 's,^linux,londo-save-mime-1.0,' linux
#     rpmbuild -bb londo-save-mime.spec

Name:           londo-save-mime
Version:        1.0
Release:        1%{?dist}
Summary:        Londo Save file type registration

License:        MIT
BuildArch:      noarch
Source0:        %{name}-%{version}.tar.gz

Requires:       shared-mime-info
Requires:       desktop-file-utils
BuildRequires:  desktop-file-utils

%description
Registers the .londo extension as application/vnd.london.londo, including the
shared-mime-info entry, the desktop entry and the hicolor icons.

Generated by filekind 0.5.0. Edit the .filekind spec and
regenerate rather than patching this spec file.

%prep
%setup -q

%install
install -Dm644 londo-save-mime.xml %{buildroot}%{_datadir}/mime/packages/londo-save-mime.xml
desktop-file-install --dir=%{buildroot}%{_datadir}/applications londo-player.desktop

if [ -f icons/hicolor/16x16/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/16x16/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/16x16/mimetypes/application-vnd.london.londo.png
fi
if [ -f icons/hicolor/22x22/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/22x22/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/22x22/mimetypes/application-vnd.london.londo.png
fi
if [ -f icons/hicolor/24x24/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/24x24/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/24x24/mimetypes/application-vnd.london.londo.png
fi
if [ -f icons/hicolor/32x32/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/32x32/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/32x32/mimetypes/application-vnd.london.londo.png
fi
if [ -f icons/hicolor/48x48/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/48x48/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/48x48/mimetypes/application-vnd.london.londo.png
fi
if [ -f icons/hicolor/64x64/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/64x64/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/64x64/mimetypes/application-vnd.london.londo.png
fi
if [ -f icons/hicolor/128x128/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/128x128/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/128x128/mimetypes/application-vnd.london.londo.png
fi
if [ -f icons/hicolor/256x256/mimetypes/application-vnd.london.londo.png ]; then
  install -Dm644 icons/hicolor/256x256/mimetypes/application-vnd.london.londo.png \
    %{buildroot}%{_datadir}/icons/hicolor/256x256/mimetypes/application-vnd.london.londo.png
fi

%files
%{_datadir}/mime/packages/londo-save-mime.xml
%{_datadir}/applications/londo-player.desktop
%{_datadir}/icons/hicolor/*/mimetypes/application-vnd.london.londo.png

%post
/usr/bin/update-mime-database %{_datadir}/mime &>/dev/null || :
/usr/bin/update-desktop-database %{_datadir}/applications &>/dev/null || :
/usr/bin/gtk-update-icon-cache -q -t -f %{_datadir}/icons/hicolor &>/dev/null || :

%postun
/usr/bin/update-mime-database %{_datadir}/mime &>/dev/null || :
/usr/bin/update-desktop-database %{_datadir}/applications &>/dev/null || :
/usr/bin/gtk-update-icon-cache -q -t -f %{_datadir}/icons/hicolor &>/dev/null || :

%changelog
* Thu Jan 01 1970 filekind <nobody@example.invalid> - 1.0-1
- Generated by filekind 0.5.0
