crates/filekind-core/tests/snapshots/golden__londo__linux_uninstall_sh.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
#!/bin/sh
# Generated by filekind [VERSION] — do not edit.
# Source: Londo Save (.londo)
# Regenerate with: filekind build
#
# Reverses install.sh. Every register action has a matching unregister action
# — that is a hard rule, not a nice-to-have.

set -eu

here=$(CDPATH= cd -- "$(dirname -- "$0")" && pwd)
cd "$here"

MODE=user
DATA_DIR="${XDG_DATA_HOME:-$HOME/.local/share}"
MIME="application/vnd.london.londo"
ICON_NAME="application-vnd.london.londo"
DESKTOP_FILE="londo-player.desktop"
MIME_FILE="londo-save-mime.xml"

if command -v xdg-mime >/dev/null 2>&1 && [ -f "$MIME_FILE" ]; then
    printf 'Removing MIME type %s\n' "$MIME"
    xdg-mime uninstall --mode "$MODE" "$MIME_FILE" || true
fi

if command -v xdg-icon-resource >/dev/null 2>&1; then
    for size in 16 22 24 32 48 64 128 256 ; do
        xdg-icon-resource uninstall --context mimetypes --mode "$MODE" \
            --size "$size" "$ICON_NAME" 2>/dev/null || true
    done
fi

rm -f "$DATA_DIR/applications/$DESKTOP_FILE"

if command -v update-desktop-database >/dev/null 2>&1; then
    update-desktop-database "$DATA_DIR/applications" || true
fi
if command -v update-mime-database >/dev/null 2>&1; then
    update-mime-database "$DATA_DIR/mime" || true
fi

printf 'Removed %s.\n' "$MIME"
