crates/filekind-core/tests/snapshots/golden__londo__macos_Londo_Save_app_Contents_Info_plist.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<!--
Generated by filekind [VERSION] — do not edit.
Source: Londo Save (.londo)
Regenerate with: filekind build

The Info.plist of a stub .app whose only job is to declare the type. It is
not signed and not notarised, so Gatekeeper will not trust it and Launch
Services may ignore it entirely. Useful for local testing; not shippable.
-->
<plist version="1.0">
<dict>
  <key>CFBundleName</key>
  <string>Londo Save</string>
  <key>CFBundleDisplayName</key>
  <string>Londo Save</string>
  <key>CFBundleIdentifier</key>
  <string>wtf.londo.player</string>
  <key>CFBundleVersion</key>
  <string>1.0</string>
  <key>CFBundleShortVersionString</key>
  <string>1.0</string>
  <key>CFBundlePackageType</key>
  <string>APPL</string>
  <key>CFBundleExecutable</key>
  <string>londo-save</string>
  <key>CFBundleInfoDictionaryVersion</key>
  <string>6.0</string>
  <key>CFBundleIconFile</key>
  <string>icon.icns</string>
  <key>LSMinimumSystemVersion</key>
  <string>10.13</string>
  <key>NSHighResolutionCapable</key>
  <true/>

  <key>UTExportedTypeDeclarations</key>
  <array>
    <dict>
      <key>UTTypeIdentifier</key>
      <string>wtf.londo.player.londo</string>
      <key>UTTypeDescription</key>
      <string>Londo project save file</string>
      <key>UTTypeConformsTo</key>
      <array>
        <string>public.data</string>
        <string>public.archive</string>
      </array>
      <key>UTTypeIconFile</key>
      <string>icon.icns</string>
      <key>UTTypeTagSpecification</key>
      <dict>
        <key>public.filename-extension</key>
        <array>
          <string>londo</string>
        </array>
        <key>public.mime-type</key>
        <array>
          <string>application/vnd.london.londo</string>
        </array>
      </dict>
    </dict>
  </array>

  <key>CFBundleDocumentTypes</key>
  <array>
    <dict>
      <key>CFBundleTypeName</key>
      <string>Londo Save</string>
      <key>CFBundleTypeRole</key>
      <string>Editor</string>
      <key>LSHandlerRank</key>
      <string>Owner</string>
      <key>LSItemContentTypes</key>
      <array>
        <string>wtf.londo.player.londo</string>
      </array>
      <key>CFBundleTypeIconFile</key>
      <string>icon.icns</string>
    </dict>
  </array>
</dict>
</plist>
