crates/filekind-core/tests/snapshots/golden__londo__macos_Londo_Save_app_Contents_MacOS_londo-save.snap
---
source: crates/filekind-core/tests/golden.rs
expression: text
---
#!/bin/sh
# Generated by filekind [VERSION] — do not edit.
# Source: Londo Save (.londo)
# Regenerate with: filekind build
#
# The stub bundle's executable. macOS requires CFBundleExecutable to exist and
# be runnable; this is the smallest thing that satisfies it.
exec 'londo-player' "$@"
